[tool.poetry]
name = "mdctn"
version = "0.1.0"
description = "Multidimensional Modified Discrete Cosine Transforms"
authors = ["Aravind Reddy Voggu <aravind.reddy@iiitb.org>"]
maintainers = ["Aravind Reddy Voggu <aravind.reddy@iiitb.org>"]
repository = "https://github.com/zeroby0/mdctn.git"
keywords = ["Nexmon", "CSI", "Nexmon_CSI", "WiFi"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.23.5"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
pylama = "^8.4.1"
grip = "^4.6.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
